add for ... of reference

--- a/problems/01.md
+++ b/problems/01.md
@@ -36,6 +36,7 @@ Output:
 
 + [Iteration protocol](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Iteration_protocols#Builtin_iterables)
 + [ES6 Generators](https://davidwalsh.name/es6-generators)
++ [for ... of](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Statements/for...of)
 
 # 讨论群
 
