add chinese references

--- a/problems/01.md
+++ b/problems/01.md
@@ -38,6 +38,11 @@ Output:
 + [ES6 Generators](https://davidwalsh.name/es6-generators)
 + [for ... of](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Statements/for...of)
 
+中文
+
++ [迭代器和 for-of 循环](http://www.infoq.com/cn/articles/es6-in-depth-iterators-and-the-for-of-loop)
++ [生成器 Generators](http://www.infoq.com/cn/articles/es6-in-depth-generators)
+ 
 # 讨论群
 
 微信加我好友 (hayeah666)，我拉你入讨论群。
