--- a/problems/02.md
+++ b/problems/02.md
@@ -1,4 +1,4 @@
-# wait 异步函数
+# timeout 异步函数
 
 实现 timeout 异步函数。timeout 会在指定的延迟之后返回当前的时间。
 
@@ -29,6 +29,7 @@
 9 - Fri Sep 09 2016 15:09:43 GMT+0800 (HKT)
 10 - Fri Sep 09 2016 15:09:44 GMT+0800 (HKT)
 */
+```
 
 # 运行方式
 
