--- a/problems/02.md
+++ b/problems/02.md
@@ -44,7 +44,7 @@ https://www.typescriptlang.org/play/
 # 参考资料
 
 + [ES7 async functions](https://jakearchibald.com/2014/es7-async-functions/)
-+ [JavaScript Promises(http://www.html5rocks.com/en/tutorials/es6/promises/)
++ [JavaScript Promises](http://www.html5rocks.com/en/tutorials/es6/promises/)
 
 中文:
 
